# atf-previewer

./: .gitignore  BinData.cpp  BinData.h  BinDataBase.cpp  BinDataBase.h  BinDataFac.cpp  BinDataFac.h  BinDataMFile.cpp  BinDataMFile.h  CMakeLists.txt  ChanSelector.cpp  ChanSelector.h  Cnst.h  Combo.cpp  Combo.h  CsvExport.cpp  CsvExport.h  DataHeader.cpp  DataHeader.h  DataHeaderFac.cpp  DataMediator.cpp  DataMediator.h  DataMediatorFac.cpp  DataMediatorFac.h  ErrHndlr.h  ExportDialog.cpp  ExportDialog.h  FileUtil.cpp  FileUtil.h  HelpAboutDialog.cpp  HelpAboutDialog.h  LineSeriesBuilderBase.cpp  LineSeriesBuilderBase.h  LineSeriesBuilderMinMax.cpp  LineSeriesBuilderMinMax.h  LineSeriesBuilderMinMaxFillUnder.cpp  LineSeriesBuilderMinMaxFillUnder.h  LineSeriesBuilderSimple.cpp  LineSeriesBuilderSimple.h  LineSeriesBuilderSimpleFillUnder.cpp  (+45 more)
.github/workflows/: build.yml
StatusReport/: BinFileType.h  CMakeLists.txt  Cnst.h  DataHeader.cpp  FileConverter.cpp  FileConverter.h  FileConverterFac.h  FileUtil.cpp  FileUtil.h  PsnFileConverter.cpp  PsnFileConverter.h  PsnStatusFile.cpp  PsnStatusFile.h  StatusDisplay.cpp  StatusDisplay.h  StatusFileBase.cpp  StatusFileBase.h  StatusFileType.cpp  StatusFileType.h  doBuild  main.cpp  statusKey.txt
common/: BinData.cpp  BinDataBase.h  BinDataFac.h  BinDataMFile.cpp  DataHeader.h  DataHeaderFac.cpp  DspErr.cpp  DspErr.h  ErrHndlr.cpp  PsnStatusFile.cpp  StatusFileBase.h  StatusFileFac.cpp  StatusFileFac.h  VDisk.cpp  VDisk.h
documentation/: file-formats.md  quartz-header.json
fileReformatter/: BinFileType.cpp  BinFileType.h  CMakeLists.txt  Cnst.h  DataHeader.cpp  DataHeader.h  FileConverter.cpp  FileConverter.h  FileUtil.cpp  FileUtil.h  PsnFileConverter.cpp  PsnFileConverter.h  doBuild  main.cpp
fileReformatter2/: BinFileType.cpp  BinFileType.h  CMakeLists.txt  DataHeader.cpp  DataHeader.h  DataHeaderFac.cpp  DataHeaderFac.h  DspErr.cpp  DspErr.h  FileConverter.cpp  FileConverter.h  FileConverterFac.cpp  FileConverterFac.h  FileUtil.cpp  FileUtil.h  PsnFileConverter.cpp  PsnFileConverter.h  doBuild  main.cpp
fileReformatter2/Doc/: Context1.dia  dataDictionary.txt
save/: BinData.cpp  BinData.h  DataReader.cpp  DataReader.h  PlotBuffer.cpp  PlotBuffer.h  ViewerCtrl-1.cpp  ViewerCtrl-1.h
